k8s/infra/bootstrap/flux-system/rendered/service.yaml
---
# Source: flux-operator/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flux-operator
  namespace: flux-system
  labels:
    helm.sh/chart: flux-operator-0.58.1
    app.kubernetes.io/name: flux-operator
    app.kubernetes.io/instance: flux-operator
    app.kubernetes.io/version: "v0.58.1"
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
    - port: 8080
      targetPort: http-metrics
      protocol: TCP
      name: http
    - port: 9080
      targetPort: http-web
      protocol: TCP
      name: http-web
  selector:
    app.kubernetes.io/name: flux-operator
    app.kubernetes.io/instance: flux-operator
