k8s/infra/bootstrap/flux-system/rendered/networkpolicy.yaml
---
# Source: flux-operator/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: flux-operator-web
  namespace: flux-system
  labels:
    helm.sh/chart: flux-operator-0.59.0
    app.kubernetes.io/name: flux-operator
    app.kubernetes.io/instance: flux-operator
    app.kubernetes.io/version: "v0.59.0"
    app.kubernetes.io/managed-by: Helm
spec:
  policyTypes:
    - Ingress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: flux-operator
      app.kubernetes.io/instance: flux-operator
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 9080
        - protocol: TCP
          port: 8080
